registration form for seniors done

--- a/src/components/NavbarComponent/Navbar.css
+++ b/src/components/NavbarComponent/Navbar.css
@@ -52,3 +52,37 @@ span {
     opacity: 50%;
     cursor: pointer;
 }
+
+.register-container {
+    flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+	height: fit-content;
+	width: 15em;
+	background: white;
+	border-radius: 10px;
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
+	padding: 1em;
+	/* for IE */
+	box-shadow: 0 0 0 1000px rgba(0,0,0,.6);
+	/* for real browsers */
+	box-shadow: 0 0 0 100vmax rgba(0,0,0,.6);
+	z-index: 5;
+}
+
+.form-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+    border-bottom: 1px solid rgba(200, 200, 200, 0.8);
+}
+
+.form-item {
+    margin-bottom: 10px;
+}
