--- a/src/components/NavbarComponent/Navbar.css
+++ b/src/components/NavbarComponent/Navbar.css
@@ -53,7 +53,7 @@ span {
     cursor: pointer;
 }
 
-.register-container {
+.register-container, .login-container {
     flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
