--- a/src/components/NavbarComponent/Navbar.css
+++ b/src/components/NavbarComponent/Navbar.css
@@ -48,7 +48,7 @@ span {
     cursor: pointer;
 }
 
-.nav-flex-item .blue-button:hover {
+.nav-flex-item p:hover {
     opacity: 50%;
     cursor: pointer;
 }
